--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ header h2 {
   letter-spacing: .2em;
   margin-bottom: 0.3rem;
   margin-top: 0.5rem;
-  display: inline-block;
+/*   /*display: inline-block; */
 }
 
 /* Center the "know your Coach" heading always */
@@ -71,6 +71,7 @@ header h2 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   letter-spacing: -1px;
+  display: inline-block;
 }
 
 main {
